Fixed Account Sign-in issue with 'Tap Yes'; code clean up